The list describes some of the many text-level elements in HTML.

--- a/text-level-elements_webpage.html
+++ b/text-level-elements_webpage.html
@@ -54,7 +54,7 @@
         <mark>inline</mark> elements.
         For example, the italicized or boldface text in this paragraph is considered 
         inline content because it appears alongside the surrounding text. 
-        Figure 1–16 describes some of the many text-level elements in HTML. 
+        The list describes some of the many text-level elements in HTML. 
     </p>
 
     <pre>
